# test-hatch_maumau

./: 404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy.yml
api/: index.html
docs/: api.md
search/: search_index.json
src/test_hatch_maumau/: __about__.py  __init__.py  script1.py
tests/: __init__.py
